syntax = "proto3";
package hello;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.hello.grpc";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "HELLO";

import "common.proto";

// The greeter service definition.
service Hello {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    Status status = 999;
    string uuid = 1;
    string message = 2;
    int64 created =3 ;
    int64 lastUpdated = 4;
}


